cmake_minimum_required(VERSION 3.26)
project(cpp)

set(CMAKE_CXX_STANDARD 23)

add_executable(cpp main.cpp)
add_executable(solution solution.cpp
        solution.h)
add_executable(DBit DBit.cpp)
add_executable(link link.cpp)
add_executable(BLL BLL.cpp)
add_executable(plus plus.cpp)
add_executable(mali mali.cpp)
add_executable(slj slj.cpp)
add_executable(3lj 3lj.cpp)
add_executable(Puzzle Puzzle.cpp)
add_executable(puzzle0 puzzle0.cpp)
add_executable(carpet carpet.cpp)
add_executable(grid grid.cpp)
add_executable(rand rand.cpp)
add_executable(grad0 grid0.cpp)
add_executable(format format.cpp)
add_executable(shortest shortest.cpp)
add_executable(query query.cpp)
add_executable(equation equation.cpp)
add_executable(watch watch.cpp)
add_executable(huo huo.cpp)
add_executable(jisuan jisuan.cpp)
add_executable(gptw gptw.cpp)
add_executable(material material.cpp)
add_executable(festival festival.cpp)
add_executable(s star.cpp)
add_executable(s0 star0.cpp)
add_executable(log log.cpp)
add_executable(courie courie.cpp)
add_executable(fuck fuck.cpp)
add_executable(floor floor.cpp)
add_executable(context context.cpp)
add_executable(chara characterM.cpp)
add_executable(libra libra.cpp)
add_executable(matrix matrix.cpp)
add_executable(new_target tree.cpp)
add_executable(pvz pvz.cpp)
add_executable(swma swma.cpp)
add_executable(integer int_stream.cpp)
add_executable(sort sort.cpp)
add_executable(sfdaf sfdeef.cpp)
add_executable(swm swm.cpp)
add_executable(card card.cpp)
add_executable(times times.cpp)
add_executable(ssa ssa.cpp)
add_executable(key key.cpp)
add_executable(pkf pkf.cpp)
add_executable(arr arr.cpp
        ArrayList.cpp
        ArrayList.h)
add_executable(Mc0 Mc0.cpp)
add_executable(MC MC.cpp)
add_executable(myc mycm.cpp
        MyContainer.h
        MyContainer.cpp)
add_executable(myc0 myc0.h
        mycm0.cpp
        myc0.cpp)
add_executable(mqm0 mqmm0.cpp mam0.cpp mqm.h)
add_executable(new_target1 excption.cpp)
add_executable(new_target2 jicheng.cpp)
add_executable(new_target3 maxDistance.cpp)
add_executable(new_target4 evenOddBit.cpp)
add_executable(new_target5 twoSum.cpp)
add_executable(new_target6 acc0.cpp)
add_executable(new_target7 matrixM.cpp matrixM.h)
